<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/info_neighbour"
    tools:context=".ui.neighbour_list.InfoNeighbourActivity"
    android:background="#EBEFF0">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:background="#8cdbff"
            app:layout_scrollFlags="scroll|enterAlways">

            <ImageView
                android:id="@+id/image_view_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:contentDescription="@string/activity_info_neighbour_description_avatar"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                android:theme="@style/ToolbarColoredBackArrow"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#e8e8e8">

            <TextView
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="14dp"
                android:layout_marginTop="14dp"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:padding="14dp"
                android:background="@color/white"/>

            <TextView
                android:id="@+id/address_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="14dp"
                android:background="@color/white"
                android:padding="14dp"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/ic_place"
                android:drawableTint="@color/icons_info_neighbour_activity"
                android:drawablePadding="14dp"/>

            <TextView
                android:id="@+id/phone_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="14dp"
                android:background="@color/white"
                android:padding="14dp"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/ic_phone"
                android:drawableTint="@color/icons_info_neighbour_activity"
                android:drawablePadding="14dp"/>

            <TextView
                android:id="@+id/social_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="14dp"
                android:background="@color/white"
                android:padding="14dp"
                android:text="Social"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/ic_social"
                android:drawableTint="@color/icons_info_neighbour_activity"
                android:drawablePadding="14dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="14dp"
                android:layout_marginTop="14dp"
                android:text="A propos de moi"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:padding="14dp"
                android:background="@color/white"/>

            <TextView
                android:id="@+id/about_me_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="14dp"
                android:background="@color/white"
                android:padding="14dp"/>



        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favorite_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAlignBottom="false"
        android:background="@null"
        android:src="@drawable/imagebutton_states"
        android:clickable="true"
        android:tint="#FFC332"
        app:fabSize="normal"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="end|bottom"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#F5F5F5"
        android:focusable="true"
        app:borderWidth="0dp"
        android:contentDescription="@string/activity_info_neighbour_description_favorite" />



</android.support.design.widget.CoordinatorLayout>